Create personal website

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-    <h1> spaghetti</h1>
+        <h1> spaghetti</h1>
+        <p>hello</p>
+        <p>itry</p>
+    <img src="https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png">
     </body>
 </html>
