Create personal website

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1> spaghetti</h1>
-        <p>hello</p>
-        <p>itry</p>
-    <img src="https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png">
+        <h1>HIROYA GOJO</h1>
+        <h2>I'm learning how to code.</h2>
+        <p>I'm learning how to code.</p>
+        <img src="https://i.imgur.com/VrthTvs.jpg">
+        <p>I try me best.</p>
     </body>
 </html> 
