--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+        <script src="main.js"></script>
+        
         <h1>HIROYA GOJO</h1>
         <h2>I'm learning how to code.</h2>
-        <p>I'm learning how to code.</p>
+        <p>i gotta learn quick.</p>
+        <audio controls id="Audio">
+            <source src="HealingBossa.mp3" type="audio/mpeg">
+        </audio>
+        <p></p>
         <img src="https://i.imgur.com/VrthTvs.jpg">
-        <p>I try me best.</p>
+        <p>ez</p>
     </body>
 </html> 
