--- a/that_was_easy/index.html
+++ b/that_was_easy/index.html
@@ -5,8 +5,11 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <button id="easy">Easy</button>
+        <h1>Press the buttons to hear a sound!</h1>
         
+        <button id="easy">Easy</button>
+
+        <button id="bigfoig">Big Foig</button>
         <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
         <script src="main.js"></script>
     </body>
