--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -4,17 +4,15 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-        <script src="main.js"></script>
-        
         <h1>HIROYA GOJO</h1>
         <h2>I'm learning how to code.</h2>
         <p>i gotta learn quick.</p>
-        <audio controls id="Audio">
-            <source src="HealingBossa.mp3" type="audio/mpeg">
-        </audio>
-        <p></p>
+        <button id="Purposeless">xd Button</button>
+        <br>
         <img src="https://i.imgur.com/VrthTvs.jpg">
+        
+        <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+        <script src="main.js"></script>
         <p>ez</p>
     </body>
 </html> 
